[package]
name = "scramble"
version = "0.1.0"
authors = ["SunKing2 <scramble.mps9z@ncf.ca>"]
license = "MIT"
homepage = "http://scramblelovers.com"
repository = "https://github.com/SunKing2/scramble"
documentation = "http://scramblelovers.com"
description = """
Scramble word game.  Boggle-like word game hosted at http://scramblelovers.com.  Multi-user, chat-enabled web game online.
"""

[dependencies]
