[package]
name = "scramble-rust"
version = "0.1.0"
authors = ["SunKing2 <scramble.mps9z@ncf.ca>"]
license = "MIT"
homepage = "http://scramblelovers.com"
repository = "https://github.com/SunKing2/scramble"
documentation = "http://scramblelovers.com"
description = """
Scramble word game.  Boggle-like word game hosted at http://scramblelovers.com.  Multi-user, chat-enabled web game online.
"""
keywords = ["boggle", "scramble", "scrabble", "words", "game"]
categories = ["games"]

[dependencies]
rusqlite = "0.13.0"
serde_json = "1.0.22"
serde_derive = "1.0.68"
serde = "1.0.68"

